# Wyrmwick

./: .gitignore  CMakeLists.txt  CODING_STANDARDS.txt  CREDITS.txt  MAP_EDITOR.TXT  Makefile  README  post-build-vc.bat
Wyrmick-VisualC/: Wyrmick-VisualC.sln
Wyrmick-VisualC/Wyrmick-VisualC/: Wyrmick-VisualC.vcxproj  Wyrmick-VisualC.vcxproj.filters
cmake/: FindLua.cmake
data/items/: items_list.txt
data/items/scripts/: dummy.lua  dummy2.lua
data/lib/: convtree.lua  dialogtree.lua  npc.lua
data/maps/: Debug Map Pre Alpha.map  Debug Map.map  Eat a Dick Zynga.map  Test Map.map
data/npc/: generic_shopkeep.lua  npcguy.lua
data/npc/scripts/: dummy.lua
data/quests/scripts/: dummy.lua
data/skills/scripts/: dummy.lua
save/: .ignore_this_file
src/: animator.cpp  animator.h  arrays.cpp  arrays.h  audio.cpp  audio.h  audio_sdl2mixer.cpp  audio_sdl2mixer.h  config.h  debug.cpp  debug.h  define.h  file_dialog.cpp  file_dialog.h  font.cpp  font.h  globals.cpp  globals.h  image.cpp  image.h  include.h  input.cpp  input.h  items.cpp  items.h  main.cpp  main_menu.cpp  main_menu.h  map.cpp  map.h  map_editor.cpp  map_editor.h  map_list.cpp  map_list.h  menu.cpp  menu.h  npc.cpp  npc.h  player.cpp  player.h  (+27 more)
src/sys/: sys_unix.cpp  sys_windows.cpp
